Add payment provider ID param in swagger UI
