# docs/swagger/swagger.json
@@ -82,7 +82,7 @@
                 }
             }
         },
-        "/auth/order/v1/order/payment/{order_detail_id}": {
+        "/auth/order/v1/order/payment/{order_detail_id}/{payment_provider_id}": {
             "patch": {
                 "security": [
                     {
@@ -102,6 +102,13 @@
                         "type": "integer",
                         "description": "Param required.",
                         "name": "order_detail_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Param required.",
+                        "name": "payment_provider_id",
                         "in": "path",
                         "required": true
                     }
